fix: 修复dark mode button change

--- a/src/Layout/ContentLayout/index.scss
+++ b/src/Layout/ContentLayout/index.scss
@@ -1,6 +1,6 @@
 .content-layout {
   padding: 10px 10px 0px 10px;
   background: var(--color-bg-3);
-  height: 98%;
+  height: 100%;
   color: var(--color-text-2);
 }
